src/test/ui/async-await/issue-72590-type-error-sized.stderr
error[E0412]: cannot find type `Nonexistent` in this scope
  --> $DIR/issue-72590-type-error-sized.rs:6:10
   |
LL |     foo: Nonexistent,
   |          ^^^^^^^^^^^ not found in this scope

error[E0412]: cannot find type `Missing` in this scope
  --> $DIR/issue-72590-type-error-sized.rs:11:11
   |
LL |     test: Missing
   |           ^^^^^^^ not found in this scope

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/issue-72590-type-error-sized.rs:15:19
   |
LL |     async fn frob(self) {}
   |                   ^^^^ doesn't have a size known at compile-time
   |
   = help: within `Foo`, the trait `Sized` is not implemented for `str`
   = note: required because it appears within the type `Foo`
   = help: unsized fn params are gated as an unstable feature
help: function arguments must have a statically known size, borrowed types always have a known size
   |
LL |     async fn frob(&self) {}
   |                   ^

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0412.
For more information about an error, try `rustc --explain E0277`.
